Bug 209156 - Heading titles for the email columns are not precise enough
Summary: Heading titles for the email columns are not precise enough
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-02 00:26 UTC by Sabine Faure
Modified: 2009-10-02 23:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-10-02 00:26:44 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kontact and go to KAB
- Type a couple of contacts with several email addresses
- right click on the 'Name' column heading and check the 'Email Address' and 'Emails' check boxes.

The two columns correctly appear in the middle column of KAB main view. However I think that the column headings are not explicit enough:

- Since the 'Email Address' column only displays the preferred address, I would call it 'Preferred email'

- Since the 'Emails' column displays all the contact's email addresses, I would call it 'All emails'

What do you think?

Trunk, Svn Rev 1030016
Comment 1 Tobias Koenig 2009-10-02 11:18:51 UTC
SVN commit 1030411 by tokoe:

Fix heading titles

BUG: 209156


 M  +2 -2      contactstreemodel.cpp  
 M  +2 -2      modelcolumnmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1030411
Comment 2 Sabine Faure 2009-10-02 23:19:54 UTC
It is corrected now.

The heading of those columns have been changed into 'Preferred Email' and 'All Emails'.

Trunk, Svn Rev 209156