Fix heading titles

BUG: 209156

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1030411